[package]
name = "cc3220sf-hal"
version = "0.2.0"
authors = ["matt"]
edition = "2018"
readme = "README.md"
description = "HAL crate for the Texas Instruments CC3220SF"
keywords = ["svd2rust", "cortex-m", "arm", "cc3220sf", "HAL", "TI"]
license= "GPL-3.0"
github= "https://github.com/moge233/cc3220sf-hal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.0"
nb = "0.1.2"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[dependencies.cortex-m-rt]
version = "0.6.12"

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.cc3220sf]
version = "0.2.0"
features = ["rt"]

[profile.release]
# codegen-unit = 1
debug = true
lto = true
